Nav grid, social icons in place. Issues aligning icons

--- a/css/styles.css
+++ b/css/styles.css
@@ -28,11 +28,31 @@ h1, h2, h3, h4, h5, h6 {
     display:flex;
 }
 
+.brand-image{
+  border: 1px solid #00f;
+  width:100%; height: 175px;
+}
+
 .main-nav
 {
     border:1px solid #000;
     width:25%;
-    height:200px;
+    height:auto;
+}
+
+.nav-list{
+  border: 1px solid #361;
+  width: 100%; height: 355px;
+}
+.social{
+  justify-content: flex-end;
+  border: 1px solid #F90;
+  width: 100%; height: 50px;
+}
+
+
+.fa{
+  color: red; 
 }
 
 .main-content
@@ -40,5 +60,6 @@ h1, h2, h3, h4, h5, h6 {
     border:1px solid red;
     width:75%;
     height:100vh;
-    background:url("../images/eufC1.jpg") 0 0 no-repeat;
+    background:url("../images/eufC2.jpg") 0 0 no-repeat;
+    background-size: cover;
 }
